@@ -13,9 +13,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
-import java.util.List;
-import java.util.Optional;
-import java.util.Random;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,7 +28,7 @@ public class EventServiceImpl implements EventService {
     @Override
     public Integer selectCollectorId(Integer celebratedId) throws TooFewParticipants {
         Integer celGrp = usrRepo.getGroupId(celebratedId);
-        List<Integer> possibleCollectors = evRepo.getAllParticipantIds(celebratedId).stream().filter(id -> id != celebratedId && (usrRepo.getGroupId(id) != celGrp || (usrRepo.getGroupId(id) == null && celGrp == null))).collect(Collectors.toList());
+        List<Integer> possibleCollectors = evRepo.getAllParticipantIds(celebratedId).stream().filter(id -> !Objects.equals(id, celebratedId) && (!Objects.equals(usrRepo.getGroupId(id), celGrp) || usrRepo.getGroupId(id) == null)).toList();
         Integer nrCollectors = possibleCollectors.size();
         if (nrCollectors < 2) throw new TooFewParticipants();
         Random rndGen = new Random();
@@ -39,22 +37,58 @@ public class EventServiceImpl implements EventService {
 
     // eventul nu va fi creat cu mai mult de 2 saptamani inainte de ziua de nastere
     @Override
-    public void addEvent(Integer celebratedId, Double amount) throws UserNotInGroup, TooFewParticipants, UserNotFoundException {
-        if(evRepo.getAllParticipantIds(celebratedId).size() < 2) throw new TooFewParticipants();
+    public Integer addEvent(Integer celebratedId, Double amount) throws UserNotFoundException {
+        if(evRepo.getAllParticipantIds(celebratedId).size() < 2) return null;
         Optional<User> celUsr = usrSrv.findUserById(celebratedId);
-        Integer collectorId = selectCollectorId(celebratedId);
-        Optional<User> colUsr = usrSrv.findUserById(collectorId);
-        if (celUsr.isEmpty() || colUsr.isEmpty()) throw new UserNotFoundException();
-        LocalDate birthday = celUsr.get().getBirthday();
+        System.out.println("Sarbatorit " + celUsr.get().getId());
+        try {
+            var participants = evRepo.getAllParticipantIds(celebratedId);
+            Integer collectorId = participants.get(selectCollectorId(celebratedId));
+            Optional<User> colUsr = usrSrv.findUserById(collectorId);
+            System.out.println("Colector: " + collectorId);
+            System.out.println("Colector: " + colUsr.get());
+            if (celUsr.isEmpty() || colUsr.isEmpty()) return null;
+            LocalDate birthday = celUsr.get().getBirthday();
+            Integer month = birthday.getMonth().getValue();
+            Integer year = month < LocalDate.now().getMonth().getValue() ? LocalDate.now().getYear() + 1 : LocalDate.now().getYear();
+            Event eventToAdd = Event.builder()
+                    .celebratedUser(celUsr.get())
+                    .collectorUser(colUsr.get())
+                    .collectedAmount(amount)
+                    .collectingPlace(colUsr.get().getGroup())
+                    .creationDate(LocalDate.of(year, birthday.getMonth(), birthday.getDayOfMonth()))
+                    .build();
+            System.out.println("Eveniment: " + eventToAdd.toString());
+            evRepo.save(eventToAdd);
+            return this.findEventId(colUsr.get().getId(), celUsr.get().getId(), this.createDate(celUsr.get().getBirthday()), colUsr.get().getGroup() != null ? colUsr.get().getGroup().getId() : null);
+        }
+        catch (TooFewParticipants e) {
+            System.out.println(e.getMessage());
+            return null;
+        }
+    }
+
+    @Override
+    public LocalDate createDate(LocalDate birthday) {
         Integer month = birthday.getMonth().getValue();
         Integer year = month < LocalDate.now().getMonth().getValue() ? LocalDate.now().getYear() + 1 : LocalDate.now().getYear();
-        Event eventToAdd = Event.builder()
-                .celebratedUser(celUsr.get())
-                .collectorUser(colUsr.get())
-                .collectedAmount(amount)
-                .collectingPlace(colUsr.get().getGroup())
-                .creationDate(LocalDate.of(year, birthday.getMonth(), birthday.getDayOfMonth()))
-                .build();
-        evRepo.save(eventToAdd);
+        return LocalDate.of(year, month, birthday.getDayOfMonth());
+    }
+
+    @Override
+    public Integer findEventId(Integer collectorId, Integer userId, LocalDate createDate, Integer groupId) {
+        return evRepo.getEvent(collectorId, userId, createDate, groupId);
+    }
+
+    @Override
+    public Optional<Event> findById(Integer id) {
+        return evRepo.findById(id);
+    }
+
+    @Override
+    public List<Event> findAllEventsByCelebratedId(Integer celebratedId) {
+        var usr = usrSrv.findUserById(celebratedId).orElse(null);
+        if (usr == null) return new ArrayList<>();
+        return evRepo.findAllByCelebratedUser(usr);
     }
 }
